# conan-usage

./: .gitignore  README.md  index.html  run.ps1  run.py  run.sh
Apps/testLogLib/: CMakeLists.txt  conanfile.py
Apps/testLogLib/src/: main.cpp
Apps/testLogLib/test_package/: conanfile.py
Libraries/lib_headeronly/: conanfile.py
Libraries/lib_headeronly/include/: lib_headeronly.h
Libraries/loglib/: CMakeLists.txt  conanfile.py
Libraries/loglib/include/: logLib.h
Libraries/loglib/src/: globalConfig.h
Libraries/loglib/test_package/: CMakeLists.txt
Libraries/loglib/test_package/src/: example.cpp
docs/: Missing-binary.md  README.md
mypkg/: conanfile.py
mypkg/src/: mypkg.cpp
mypkg/test_package/: CMakeLists.txt
use_mypkg/: conanfile.txt
use_spd_log/conan_log/: CMakeLists.txt  conanfile.py
use_spd_log/conan_log/include/: logLib.h
use_spd_log/conan_log/src/: globalConfig.h
use_spd_log/conan_log/test_package/: CMakeLists.txt  conanfile.py
use_spd_log/conan_log/test_package/src/: example.cpp
use_spd_log/use_conan_log/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
use_spd_log/use_conan_log/src/: example.cpp
use_spd_log2/: .gitignore  Missing-binary.md  run.bat  run.ps1
use_spd_log2/myloglib/: CMakeLists.txt  conanfile.py
use_spd_log2/myloglib/include/: logLib.h  myloglib.h
use_spd_log2/myloglib/src/: logLib.cpp  myloglib.cpp
use_spd_log2/myloglib/test_package/: CMakeLists.txt  conanfile.py
use_spd_log2/myloglib/test_package/src/: example.cpp
use_spd_log2/use_myloglib/: CMakeLists.txt  conanfile.py
use_spd_log2/use_myloglib/src/: main.cpp
